# script_hub

./: .gitignore  COMPLETION_SUMMARY.md  NODE_RULES_UPDATE_v3.6.1.md  README.md  README.zh-CN.md  TASK_2_COMPLETION_SUMMARY.md  TASK_3_ADBLOCK_CONFIG_MIGRATION.md  TASK_3_SINGBOX_SYNC_VERIFICATION.md  TASK_6_ICLOUD_SYNC_COMPLETION.md  VERIFICATION_REPORT.md  archive_and_upload.sh  convert_incompatible_media.sh  heic_to_png.sh  imganim_to_vvc.sh  jpeg_to_jxl.sh  merge_xmp.sh  png_to_jxl.sh  video_to_gif.sh  video_to_hq_gif.sh
.cache/: adblock_hashes.txt  header_hashes.txt  merge_hashes.txt  metacubex_hashes.txt  srs_hashes.txt
.github/workflows/: update_rulesets.yml
.temp_adblock_download/: adultraplus.sgmodule
conf_template/: surge_profile_template.conf
config-manager-auto-update/: clean-history.sh
conf隐私🔏/: Surge 配置注释说明  shadowroket.conf  singbox_config_生成后.json
local/: brew_auto_update.sh  com.homebrew.auto-update.plist  fix_reddit_policy_references.sh  ingest_from_surge.sh  manage_brew_auto_update.sh  merge_adblock_modules.sh  sync_modules_to_icloud-2.sh  sync_modules_to_icloud.sh  sync_modules_to_shadowrocket.sh  sync_profile_to_template.sh  sync_shadowrocket_config.py  sync_singbox_policy_groups.py  sync_to_all_proxies.sh  update_surge_social_media_policy.sh
media/: CONTRIBUTING.md  animated_to_av1.sh  animated_to_avif.sh  compress_webp.sh  convert_incompatible_media.sh  imganim_to_vvc.sh  merge_xmp.sh  static_to_avif.sh  video_to_hq_gif.sh
merge_sync/: ALL_RULESETS_COMPLETE_SUMMARY.md  EMOJI_FIX_SUMMARY.md  FINAL_SYNC_SUMMARY.md  FIREWALL_RULES_POLICY.md  POLICY_GROUP_SYNC_SUMMARY.md  README_CI_VS_LOCAL.md  README_FIREWALL_SYNC.md  README_UPDATE.md  REGION_RULES_FIX.md  RULESET_MAPPING.md  RULESET_MAPPING_VERIFICATION.md  SINGBOX_CNIP_FIX.md  TASK_12_SINGBOX_POLICY_SYNC.md  UNUSED_RULESETS_FIX_SUMMARY.md  add_missing_rules_to_surge.py  add_missing_ruleset_definitions.py  add_missing_rulesets.sh  add_missing_singbox_rules.py  add_remaining_rules_to_singbox.py  analyze_rules.py  batch_convert_to_singbox.sh  check_config_sync.sh  check_duplicates.py  check_empty_rulesets.sh  check_surge_config.py  check_surge_config_public.py  clean_git_history.sh  cleanup_empty_rulesets.sh  consolidate_modules.py  consolidate_rulesets.py  convert_surge_to_shadowrocket.py  convert_to_module.sh  detect_policy_conflicts.sh  download_adblock_modules.sh  download_modules.sh  fix_broken_modules.py  fix_manual_ruleset_tags.py  fix_module_categories.sh  fix_policy_conflicts.sh  fix_rulesets.py  (+46 more)
merge_sync/backup/: NyaMiiKo Pro Max plus👑.conf.20251206_202212.bak
module/: MODULE_CONSOLIDATION_ANALYSIS.md  README.md  module_urls.txt  modules_compatibility.json  modules_data.json  shadowrocket_conversion_log.json  shadowrocket_modules_data.json  surge_module_helper.html  surge_modules_import.conf
module/adblock_external/: README.md  blockHTTPDNS.module  (+2 more)
network/: ChinaDirect_manual.txt  batch_convert_to_singbox.sh  incremental_merge_all.sh  merge_all_rulesets.sh
ruleset/: AI.list  AIProcess.list  AIProcess_Singbox.srs  AI_Singbox.srs  AdBlock_sources.txt  Bilibili.list  CDN.list  CDN_Singbox.srs  CDN_singbox.json  ChinaDirect.list  ChinaIP.list  ChinaIP_Singbox.srs  ChinaIP_singbox.json  DNS_China_114.list  DNS_China_360.list  DNS_China_AliDNS.list  DNS_China_AliDNS_sources.txt  DNS_China_ByteDance.list  DNS_Global_Cloudflare.list  DNS_Global_Google.list  DNS_Global_Quad9.list  DNS_Global_Quad9_sources.txt  Discord.list  Discord_Singbox.srs  Discord_sources.txt  DownloadProcess_Singbox.srs  DownloadProcess_singbox.json  Fediverse.list  Gaming.list  GamingProcess.list  GamingProcess_Singbox.srs  GamingProcess_singbox.json  Gaming_Singbox.srs  GlobalMedia.list  GlobalMedia_Singbox.srs  GlobalMedia_sources.txt  GlobalProxy.list  GlobalProxy_Singbox.srs  GlobalProxy_singbox.json  GlobalProxy_sources.txt  (+22 more)
scripts/: convert_to_module.sh  imganim_to_vvc.sh  media_health_check.sh  png_to_jxl.sh  video_to_hq_gif.sh
substore/: Singbox_substore_1.11.0-.json  Singbox_substore_1.13.0+.json  node_rules_entrance.js  node_rules_landing.js  node_rules_relay.js  node_rules_singbox_entrance.js  node_rules_singbox_landing.js  node_rules_singbox_relay.js  region_patterns_enhanced.js  rules_entrance.js  rules_landing.js  rules_relay.js  singbox_entrance.js  singbox_jump.js  singbox_landing.js  singbox_relay.js
sync/: QUICKSTART.md  README_MERGE_RULES.md  SETUP.md  TEST_REPORT.md  merge_adblock_modules.sh  merge_all_rulesets.sh  sync_modules_to_shadowrocket_bak.sh  sync_profile_to_template.sh
tools/imgquality_API/: Cargo.toml  README.md
tools/imgquality_API/examples/: analyze_single.sh  json_api.js
tools/imgquality_API/src/: analyzer.rs  conversion_api.rs  converter.rs  detection_api.rs  jpeg_analysis.rs  lib.rs  lossless_converter.rs  main.rs  metrics.rs  quality_core.rs
tools/modern_format_boost/imgquality_hevc/: Cargo.toml  README.md
tools/modern_format_boost/imgquality_hevc/examples/: batch_upgrade.sh
tools/modern_format_boost/imgquality_hevc/src/: analyzer.rs  conversion_api.rs  detection_api.rs  formats.rs  heic_analysis.rs  jpeg_analysis.rs  lib.rs  lossless_converter.rs  main.rs  metrics.rs  quality_core.rs
tools/modern_format_boost/imgquality_hevc/tests/: test_explorer.rs
tools/modern_format_boost/shared_utils/: Cargo.toml  README.md
tools/modern_format_boost/shared_utils/src/: batch.rs  checkpoint.rs  codecs.rs  conversion.rs  date_analysis.rs  ffprobe.rs  image_quality_detector.rs  lib.rs  progress.rs  quality_matcher.rs  report.rs  safety.rs  tools.rs  video.rs  video_explorer.rs  video_quality_detector.rs  xmp_merger.rs
tools/modern_format_boost/shared_utils/src/metadata/: exif.rs  linux.rs  macos.rs  mod.rs  network.rs  windows.rs
tools/modern_format_boost/vidquality_av1/: Cargo.toml
tools/modern_format_boost/vidquality_av1/src/: codecs.rs  conversion_api.rs  detection_api.rs  ffprobe.rs  lib.rs
tools/vidquality_API/: Cargo.toml  README.md
tools/vidquality_API/src/: conversion_api.rs  detection_api.rs  ffprobe.rs  lib.rs  main.rs
utils/: zip_files.py
(+677 files in other folders)
