[package]
name = "vidquality"
version = "0.1.0"
edition = "2021"
authors = ["nyamiiko"]
description = "Video quality analyzer and format converter API - FFV1 archival and AV1 compression"
license = "MIT"
keywords = ["video", "ffv1", "av1", "quality", "archival"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory traversal
walkdir = "2.4"

# File modification time
filetime = "0.2"
libc = "0.2"

# Command execution check
which = "6.0"

# Regex for parsing ffprobe output
regex = "1.10"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
