[package]
name = "shared_utils"
version = "0.2.0"
edition = "2021"
description = "Shared utilities for modern_format_boost tools"
authors = ["Pixly Team"]

[dependencies]
# Progress bar
indicatif = "0.17"
# Terminal colors
console = "0.15"
# Time formatting
chrono = "0.4"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Directory walking
walkdir = "2.4"
# Metadata preservation (from metadata_keeper)
libc = "0.2"
xattr = "1.3"
filetime = "0.2"
log = "0.4"
which = "6.0"

[features]
default = []
