[package]
name = "shared_utils"
version = "0.2.0"
edition = "2021"
description = "Shared utilities for modern_format_boost tools"
authors = ["Pixly Team"]

[dependencies]
# Error handling
anyhow = "1.0"
# Progress bar
indicatif = "0.17"
# CPU detection
num_cpus = "1.16"
# Terminal colors
console = "0.15"
# Time formatting
chrono = { version = "0.4", features = ["serde"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Directory walking
walkdir = "2.4"
# Metadata preservation (from metadata_keeper)
libc = "0.2"
xattr = "1.3"
filetime = "0.2"
log = "0.4"
which = "6.0"
# Thread-safe global state
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
